--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
   "rules": {
     "semi": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "import/no-named-as-default": "off",
+    "import/prefer-default-export": "off",
+    "no-debugger": "warn"
   }
 }
