--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "prettier/prettier": ["error"],
     "import/no-named-as-default": "off",
     "import/prefer-default-export": "off",
-    "no-debugger": "warn"
+    "no-debugger": "warn",
+    "no-param-reassign": "warn"
   }
 }
